--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
 
     <div class="game-container">
-      <div class="indicator red no-select q">Q</div>
-      <div class="indicator green no-select w">W</div>
-      <div class="indicator yellow no-select a">A</div>
-      <div class="indicator blue no-select s">S</div>
+      <div class="indicator red q">Q</div>
+      <div class="indicator green w">W</div>
+      <div class="indicator yellow a">A</div>
+      <div class="indicator blue s">S</div>
     </div>
 
     <div class="stats-container">   
@@ -64,3 +64,4 @@
 </body>
 
 </html>
+
