--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- External Styles -->
   <link rel="stylesheet" href="./style.css" />
 
-  <link rel="icon" href="./assets/images/icon.svg" />
+  <link rel="icon" href="./assets/images/icon.svg" charset="UTF-8" />
 </head>
 <body class="gradient-background">
 
@@ -43,8 +43,8 @@
 
       
       <div class="box"> 
-        <button class="btn btn-restart">Start Over</button>
-        <button class="btn btn-reset">Reset Score</button>
+        <button id="btn-restart" class="btn btn-restart">Start Over</button>
+        <button id="btn-reset" class="btn btn-reset">Reset Score</button>
       </div>
 
       <div class="box">
@@ -64,4 +64,5 @@
 </body>
 
 </html>
+
 
