--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
   <script src="index.js"></script>
 </body>
 
 </html>
+
 
 
